--- a/testeAngular/src/app/tarefas/tarefas.component.html
+++ b/testeAngular/src/app/tarefas/tarefas.component.html
@@ -1,4 +1,4 @@
-<section id="tarefa">
+<section class="pb-2" id="tarefa">
     <div *ngFor='let _tarefa of minhaTarefa' id="margem">
         <div class="row">
             <div class="col-md-2">
@@ -15,5 +15,6 @@
             </div>
             <div class="col-md-2"></div>
         </div>
+        <hr/>
     </div>
 </section>
